--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,8 +2,7 @@ name: CI
 on:
   push:
     branches:
-      - main
-    tags: '*'
+      - master
   pull_request:
 concurrency:
   # Skip intermediate builds: always.
@@ -18,8 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.7'
-          - 'nightly'
+          - "1.7"
+          - "nightly"
         os:
           - ubuntu-latest
         arch:
