--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,17 @@
 name = "ProjectEuler"
 uuid = "465e1268-a244-4476-8002-6c4eec67e959"
 authors = ["Ondřej Winter <ondrej.winter@gmail.com>"]
-version = "0.1.0"
+version = "0.0.0"
+
+[deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
-julia = "1.7"
+BenchmarkTools = "1"
+Revise = "3"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
